[package]
name = "meshcat"
version = "0.1.2"
edition = "2021"
description = "A Rust interface to https://github.com/rdeits/meshcat"
repository = "https://github.com/JafarAbdi/meshcat"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/snapview/tokio-tungstenite/blob/master/examples/autobahn-client.rs
[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
rmp-serde = "1.1.1"
rmp = "0.8.11"
zmq = "0.10.0"
nalgebra = { version = "0.32", features = ["serde-serialize", "rand"] }
base64 = "0.21.0"
log = "0.4.17"
# Used for a nice builder pattern
typed-builder = "0.18.0"
urdf-rs = "0.7.1"
itertools = "0.11.0"
